[tool.poetry]
name = "users"
version = "0.1.0"
description = ""
authors = ["Kwame Owusu-Boakye <kwame@owusuboakye.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
alembic = "^1.11.1"
pydantic = "^2.0.3"
pydantic-settings = "^2.0.2"
black = "^23.7.0"
SQLAlchemy = "^2.0.19"
uvicorn = "^0.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
